# Memento-Lite

./: .gitignore  README.md  blog.md  config.yaml  pyproject.toml  read_pdf.py  verify_agent.py  verify_callbacks.py
src/: agent.py  app.py  config.py  main.py  memory.py  seed_memory.jsonl  tools.py  verify_retrieval.py
